--- a/app/src/main/res/layout/fragment_sdkmanager.xml
+++ b/app/src/main/res/layout/fragment_sdkmanager.xml
@@ -2,12 +2,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+	android:layout_height="match_parent">
+
+	<TextView
+        android:id="@+id/device_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+<android.widget.CheckBox
+        android:id="@+id/sdk64"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/device_type"
+        android:layout_margin="10dp"
+        android:text="SDK(64 Bit)" />
+
+    <android.widget.CheckBox
+        android:id="@+id/sdk32"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/sdk64"
+        android:layout_margin="10dp"
+        android:text="SDK(32 Bit)" />
+
+    <android.widget.CheckBox
+        android:id="@+id/buildtools"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/sdk32"
+        android:layout_margin="10dp"
+	    android:text="-with Build Tools" />
 
     <Button
         android:id="@+id/download"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentBottom="true"
         android:text="Download" />
 
 </RelativeLayout>
