Revert "modified:   app/src/main/res/layout/fragment_sdkmanager.xml"
This reverts commit 64b1aeab86ae5635d1be9ff9396f8177364b7728.

	modified:   app/src/main/res/layout/fragment_sdkmanager.xml

--- a/app/src/main/res/layout/fragment_sdkmanager.xml
+++ b/app/src/main/res/layout/fragment_sdkmanager.xml
@@ -35,9 +35,9 @@
         android:id="@+id/buildtools"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/sdk32"
+        android:layout_below="@id/sdk32"
         android:layout_margin="10dp"
-	android:text="-with Build Tools" />
+	    android:text="-with Build Tools" />
 
     <Button
         android:id="@+id/download"
@@ -46,7 +46,6 @@
 	    android:text="Download"
 	    android:textColor="@color/primaryTextColor"
 	    android:textStyle="bold"
-	    android:background="#ff5252"
 	    app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
