--- a/app/src/main/res/layout/fragment_sdkmanager.xml
+++ b/app/src/main/res/layout/fragment_sdkmanager.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
     android:layout_height="match_parent">
 	
 	<TextView
@@ -32,12 +33,12 @@
         android:text="SDK(32 Bit)" />
 
     <android.widget.CheckBox
-        android:id="@+id/buildtools"
+        android:id="@+id/cmdTools"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/sdk32"
         android:layout_margin="10dp"
-	android:text="-with Build Tools" />
+	android:text="-with Command Line Tools " />
 
     <Button
         android:id="@+id/download"
