--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -139,13 +139,11 @@
         app:layout_constraintTop_toBottomOf="@id/open_terminal"
         app:rippleColor="@color/rippleHighlightColor" />
 
-<Button
+    <Button
         android:id="@+id/open_sdk"
         style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
         android:layout_width="wrap_content"
         android:layout_height="56dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:elevation="0dp"
         android:ellipsize="end"
         android:gravity="center"
@@ -155,7 +153,7 @@
         android:textColor="@color/primaryTextColor"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:icon="@drawable/ic_terminal"
+        app:icon="@drawable/ic_sdk_mamager"
         app:iconPadding="8dp"
         app:iconTint="@color/primaryTextColor"
         app:layout_constraintStart_toStartOf="@id/create_project"
