--- a/app/src/main/res/layout/layout_color_attr_editor.xml
+++ b/app/src/main/res/layout/layout_color_attr_editor.xml
@@ -23,7 +23,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/pick_color"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        style="@style/Widget.Material3.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_color_picker"
