--- a/app/src/main/res/layout/layout_crash_report.xml
+++ b/app/src/main/res/layout/layout_crash_report.xml
@@ -98,7 +98,7 @@
 
     <Button
         android:id="@+id/report_button"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
+        style="@style/Widget.Material3.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
