--- a/common/src/main/res/layout/layout_color_picker.xml
+++ b/common/src/main/res/layout/layout_color_picker.xml
@@ -100,7 +100,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/pick"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        style="@style/Widget.Material3.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
