Fixed a minor bug; Changed indicator style for tabs

--- a/app/src/main/res/layout/layout_editor_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_editor_bottom_sheet.xml
@@ -61,9 +61,10 @@
         android:layout_below="@id/text_container"
         android:background="@android:color/black"
         app:tabGravity="fill"
+        app:tabIndicatorAnimationMode="elastic"
         app:tabIndicatorColor="@color/secondaryColor"
-        app:tabIndicatorGravity="stretch"
-        app:tabIndicatorHeight="36dp"
+        app:tabIndicatorGravity="bottom"
+        app:tabIndicatorHeight="4dp"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/primaryTextColor"
         app:tabTextAppearance="@style/AppTheme.TabLayout.Title" />
